FindBugs: Method invokes inefficient floating-point Number constructor; use static valueOf instead